--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,25 @@
 @charset "utf-8";
 
+/* 스킵 네비게이션 */
+#skip {
+  position: relative;
+}
+#skip a {
+  position: absolute;
+  left: 0;
+  top: -35px;
+  border: 1px solid #fff;
+  color: #fff;
+  background: #333;
+  line-height: 30px;
+  width: 170px;
+  text-align: center;
+}
+#skip a:active,
+#skip a:focus {
+  top: 0;
+}
+
 /* 레이아웃 */
 #wrap {
   width: 100%;
