--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 #header {
   width: 100%;
   height: 325px;
-  background: #111;
+  background: url(../img/header_bg.jpg) center top repeat-x;
 }
 #contents {
   width: 100%;
@@ -67,5 +67,60 @@
   width: 990px;
   margin: 0 auto;
   height: inherit;
-  background: rgba(255,255,255,0.3);
+  /* background: rgba(255,255,255,0.3); */
 }
+
+/* 헤더 */
+.header { }
+.header .header-menu {
+  text-align: right;
+}
+.header .header-menu a {
+  color: #fff;
+  padding: 10px 0px 10px 13px;
+  display: inline-block;
+}
+.header .header-menu a:hover {
+  color: #666;
+}
+.header .header-tit {
+  text-align: center;
+}
+.header .header-tit h1 {
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #4aa8d4;
+  font-size: 28px;
+  font-weight: normal;
+  padding: 5px 20px 6px 20px;
+  margin-top: 40px;
+  display: inline-block;
+  color: #fff;
+}
+.header .header-tit a {
+  display: inline-block;
+  background-color: #2698cb;
+  font-size: 18px;
+  color: #fff;
+  padding: 5px 20px 6px 20px;
+  margin-top: -5px;
+}
+.header .header-icon {
+  text-align: center;
+  margin-top: 30px;
+}
+.header .header-icon a {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  margin: 0 3px;
+  background: url(../img/icon.png);
+}
+.header .header-icon a.icon1 { background-position: 0 0; }
+.header .header-icon a.icon2 { background-position: 0 -60px; }
+.header .header-icon a.icon3 { background-position: 0 -120px; }
+.header .header-icon a.icon4 { background-position: 0 -180px; }
+.header .header-icon a.icon1:hover { background-position: -60px 0; }
+.header .header-icon a.icon2:hover { background-position: -60px -60px; }
+.header .header-icon a.icon3:hover { background-position: -60px -120px; }
+.header .header-icon a.icon4:hover { background-position: -60px -180px; }
