--- a/css/reset.css
+++ b/css/reset.css
@@ -23,6 +23,18 @@ body, input, textarea, select, button, table {
   line-height: 1.5;
 }
 
+/* 블릿기호 초기화 */
+dl, ul, li, ol, menu {
+  list-style: none;
+}
+
+/* 제목 태그 초기화 */
+h1, h2, h3, h4, h5, h6 {
+  font-size: 13px;
+  color: #222;
+  font-weight: normal;
+}
+
 /* IR 효과 */
 .ir_pm {
   display: block;
