--- a/css/style.css
+++ b/css/style.css
@@ -21,40 +21,26 @@
 }
 
 /* 레이아웃 */
-#wrap {
-  width: 100%;
-}
+#wrap { }
 #header {
-  width: 100%;
   height: 325px;
   background: url(../img/header_bg.jpg) center top repeat-x;
 }
-#contents {
-  width: 100%;
-  height: 800px;
-  background: #222;
-}
+#contents { }
 #footer {
-  width: 100%;
   height: 200px;
   background: #333;
 }
 
 /* 컨텐츠 레이아웃 */
 #cont_nav {
-  width: 100%;
-  height: 200px;
-  background: #333;
+  background-color: #f6fdff;
 }
 #cont_tit {
-  width: 100%;
-  height: 200px;
-  background: #444;
+  background-color: #eaf7fd;
 }
-#cont_ban { 
-  width: 100%;
-  height: 200px;
-  background: #555;
+#cont_ban {
+  background-color: #dceff7;
 }
 #cont_cont {
   width: 100%;
@@ -71,7 +57,6 @@
 }
 
 /* 헤더 */
-.header { }
 .header .header-menu {
   text-align: right;
 }
@@ -124,3 +109,114 @@
 .header .header-icon a.icon2:hover { background-position: -60px -60px; }
 .header .header-icon a.icon3:hover { background-position: -60px -120px; }
 .header .header-icon a.icon4:hover { background-position: -60px -180px; }
+
+/* 전체 메뉴 */
+.nav {
+  overflow: hidden;
+  padding: 30px 0;
+}
+.nav > div {
+  float: left;
+  width: 40%;
+}
+.nav > div:last-child {
+  width: 20%;
+}
+.nav > div.last {
+  width: 20%;
+}
+.nav > div h3 {
+  font-size: 18px;
+  color: #25a2d0;
+  margin-bottom: 4px;
+}
+.nav > div ol {
+  overflow: hidden;
+}
+.nav > div ol li {
+  float: left;
+  width: 50%;
+}
+.nav > div.last ol li {
+  width: 100%;
+}
+.nav > div ol li a:hover {
+  text-decoration: underline;
+}
+
+/* 타이틀 */
+.tit {
+  position: relative;
+}
+.tit h2 {
+  font-size: 40px;
+  text-align: center;
+  padding: 5px 0;
+  letter-spacing: 2px;
+  color: #2c94c4;
+  font-family: 'Nanum Brush Script', cursive;
+}
+.tit .btn {
+  position: absolute;
+  top: 5px;
+  right: 0;
+  width: 60px;
+  height: 60px;
+  background: url(../img/icon.png) no-repeat 0 -600px;
+}
+
+/* 배너 */
+.ban {
+  position: relative;
+  padding: 24px 0 20px;
+}
+.ban a.prev {
+  position: absolute;
+  left: -80px;
+  top: 60px;
+  width: 43px;
+  height: 43px;
+  background: url(../img/icon.png) no-repeat -150px 0;
+}
+.ban a.next {
+  position: absolute;
+  right: -80px;
+  top: 60px;
+  width: 43px;
+  height: 43px;
+  background: url(../img/icon.png) no-repeat -150px -43px;
+}
+.ban a.prev:hover {
+  background-position: -193px 0;
+}
+.ban a.next:hover {
+  background-position: -193px -43px;
+}
+.ban ul {
+  overflow: hidden;
+}
+.ban ul li {
+  float: left;
+  width: 330px;
+}
+.ban ul li:last-child {
+  text-align: right;
+}
+.ban ul li:nth-child(2) {
+  text-align: center;
+}
+.ban ul li.ban_img1 {
+  text-align: left;
+}
+.ban ul li.ban_img2 {
+  text-align: center;
+}
+.ban ul li.ban_img3 {
+  text-align: right;
+}
+.ban ul li img {
+  border: 4px solid #dcdcdc;
+}
+.ban ul li img:hover {
+  border-color: #98bcdc;
+}
