--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,10 @@
 }
 
 /* 레이아웃 */
-#wrap { }
 #header {
   height: 325px;
   background: url(../img/header_bg.jpg) center top repeat-x;
 }
-#contents { }
 #footer {
   height: 200px;
   background: #333;
@@ -271,6 +269,7 @@
   padding-left: 70px;
   border-bottom: 1px solid #d0d0d0;
   padding-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .cont .col1 .ico_img {
@@ -308,4 +307,34 @@
 }
 .cont .col6 .ico_img:hover {
   background-position: -60px -540px;
+}
+
+/* 게시판 */
+.notice {
+  position: relative;
+}
+.notice h4 {
+  font-size: 14px;
+  color: #0093be;
+  padding-bottom: 3px;
+  font-weight: bold;
+}
+.notice ul li {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  background: url(../img/dot.gif) no-repeat 0 8px;
+  padding-left: 8px;
+}
+.notice ul li a {
+  font-size: 12px;
+}
+.notice a.more {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: url(../img/icon.png) no-repeat -150px -90px;
+  width: 17px;
+  height: 17px;
 }
